z-index corrected

--- a/staticfiles/css/widget.css
+++ b/staticfiles/css/widget.css
@@ -19,6 +19,7 @@
     border-radius: 10px;
     display: none;
     flex-direction: column;
+    z-index: 1001;
 
 }
 
@@ -58,7 +59,7 @@
     align-items: center;
     justify-content: center;
     font-size: 0;
-
+    z-index: 1000;
     background-color: white;
     color: #ffffff;
 }
@@ -200,6 +201,7 @@
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    z-index:1002;
 }
 
 .modal-content {
